Bug 67206 - EDITING: No autocalculation of a cell referenced to a cell, if a column was inserted before
Summary: EDITING: No autocalculation of a cell referenced to a cell, if a column was i...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.1.0.0.beta1
Hardware: All All
: high normal
Assignee: Kohei Yoshida
URL:
Whiteboard: BSA target:4.1.1
Keywords: regression
Depends on:
Blocks: mab4.1
  Show dependency treegraph
 
Reported: 2013-07-23 06:18 UTC by urly
Modified: 2013-07-24 16:29 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description urly 2013-07-23 06:18:58 UTC
Problem description: 
A cell with reference to another cell with formula won't recalculate/autocalculate, if a column was inserted before.

Steps to reproduce:
1. In a row enter numbers for example 1 2 3 in cells A1, B1, C1
   In cell D1 enter =sum(A1:C1)
   In cell E2 enter =D1+1
   Changing any numbers in A1, B1 or C1 works well.
2. Insert a column between the number-cells, for example
   between A1 and B1.
   (All references will updated correctly.)
3. Enter a number (5 or so) into the new and empty cell B1.
   :-(
   Cell D1 autocalculate correctly,
   cell F2 not!!!!!

Current behavior:
After inserting a column some cells won't recalculate automaticly.
Cell F2 dont't recalculate automaticly.

Expected behavior:
Cell F2 must recalculate automaticly.
Operating System: Windows 7
Version: 4.1.0.3 rc
Comment 1 Thomas van der Meulen [retired] 2013-07-23 08:03:47 UTC
I can reproduce this bug running LibreOffice Version: 4.1.0.3
Build ID: 0f08a823567f802c29cbaf2b327db19aaf72016

I tested it with 4.1 beta 1 Version: 4.1.0.0.beta1
Build ID: 3a2c2d2417101e45fe07cfd8358acf2204a98f3 and the bug was there already so a regression from 4.0....

Was still working in 4.0.x Version 4.0.4.2 (Build ID: 9e9821abd0ffdbc09cd8c52eaa574fa09eb08f2)
Comment 2 Michael Meeks 2013-07-23 08:31:18 UTC
Kohei - an internal structural re-work issue in 4.1 ?
Comment 3 Kohei Yoshida 2013-07-23 15:24:35 UTC
It works fine on my feature branch (feature/formula-core-rework), but then, I just re-worked this very area last week.  I haven't tried the master branch or the 4.1 branch yet.
Comment 4 Michael Meeks 2013-07-24 10:47:23 UTC
I guess (annoying as it is) fixing this MAB for 4.1.x should be a higher prio. than the feature work on master; hopefully it's something small ...
Comment 5 Kohei Yoshida 2013-07-24 11:52:30 UTC
Sure. Unfortunately this part of the code is a pain to debug, which is why I had to rework this to split this reference update code into 3 to reduce complexity on my feature branch, to make it manageable.  I already spent some amount yesterday and didn't find anything.  This is going to be a long battle.

Why is a bug like this reported so late in the game....
Comment 6 Kohei Yoshida 2013-07-24 11:54:58 UTC
Since the master will have a different fix coming from my feature branch, whatever the fix ends up being will be for 4.1 only, just FYI.
Comment 7 Kohei Yoshida 2013-07-24 14:47:33 UTC
Ok.  I've found the fix.  Will put it in shortly.
Comment 8 Kohei Yoshida 2013-07-24 14:56:13 UTC
I pushed my fix on gerrit for review: https://gerrit.libreoffice.org/#/c/5070/
Comment 9 Kohei Yoshida 2013-07-24 14:57:04 UTC
I'll take care of this on the master branch.  Right now the fix is in my feature branch, and I'll merge that to master soon.  Once it's merged, then the master branch will get the fix and the test.
Comment 10 Commit Notification 2013-07-24 15:38:00 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f446ad2e2fdfaadafdd74b395a6dd252a17a4015&h=libreoffice-4-1

fdo#67206: Don't forget to swap the broadcaster storage when swapping columns.


It will be available in LibreOffice 4.1.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Michael Meeks 2013-07-24 16:29:02 UTC
Thanks Kohei ! :-) nice catch.