fdo#67206: Don't forget to swap the broadcaster storage when swapping columns.

And a new unit test case to catch this in the future.

Change-Id: Ife7d0579849a769c23ace8bfd86a39892253a121